<resources>
    <string name="app_name">FiveCrownsAndroid</string>
    <string name="Welcome">Five Crowns</string>
    <string name="new_game_select">New Game</string>
    <string name="load_game_select">Load Game</string>
    <string name="quit_game_select">Quit</string>
    <string name="toss_heads_select">Heads</string>
    <string name="toss_tails_select">Tails</string>
    <string name="opponent_stats">Opponent Hand</string>
    <string name="player_stats">Your Hand</string>
    <string name="display_points">Points:</string>
    <string name="discard_pile">Discard Pile</string>
    <string name="draw_pile">Draw Card</string>
    <string name="draw_pull">Draw</string>
    <string name="discard_pull">Discard</string>
    <string name="help_request">Help</string>
    <string name="select_choice">Ready to have fun?</string>
    <string name="play_next">Status Report</string>
    <string name="coin_guess">Heads or tails?</string>
    <string name="coin_result_prep">Where will the coin land?: </string>
    <string name="next_round_select">Next Round</string>
    <string name="save_game_select">Save/Quit</string>
    <string name="play_game">Let\'s Begin!</string>
    <string name="win_or_lose">Win/Lose Status</string>
    <string name="coin_result">Result</string>
    <string name="card_background">Card Background</string>
    <string name="round_debug">Round Debug</string>
    <string name="computer_player_cards">Computer player cards</string>
    <string name="human_player_cards">Human player cards</string>
    <string name="discard_cards">Discard cards</string>
    <string name="draw_cards">Draw cards</string>
    <string name="hand_flipping_coin">Hand flipping coin</string>
    <string name="load_cases">Load Cases</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="load_player_save">Load Player Save</string>
    <string name="load_from_cases">Load From Cases</string>
    <string name="enter_filename">Enter filename:</string>
    <string name="round">Round</string>
    <string name="opponent_s_turn">Opponent\'s Turn</string>
    <string name="txt">.txt</string>
</resources>
