<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hands_background"

    tools:context=".CoinTossController">

    <Button
        android:id="@+id/buttonHeads"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:text="@string/toss_heads_select"
        android:onClick="headsGuess"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonTails"
        app:layout_constraintEnd_toStartOf="@+id/buttonTails" />

    <Button
        android:id="@+id/buttonTails"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/toss_tails_select"
        android:onClick="tailsGuess"
        app:layout_constraintStart_toEndOf="@+id/buttonHeads"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/statusReportTitle"
        android:layout_width="248dp"
        android:layout_height="104dp"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/coin_guess"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPlayAfterCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:onClick="startGame"
        android:text="@string/play_game"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHeads" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/coin_result_prep"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/coinTossResult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusReportTitle" />

    <TextView
        android:id="@+id/coinTossResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/coin_result"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/statusReportTitle" />

    <TextView
        android:id="@+id/winOrLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_or_lose"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonHeads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.287" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="202dp"
        android:layout_height="371dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/hand_flipping_coin"
        app:srcCompat="@drawable/coin_toss" />
</androidx.constraintlayout.widget.ConstraintLayout>