<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crowns_bg"
    tools:context=".StartScreenController">

    <TextView
        android:id="@+id/statusReportTitle"
        android:layout_width="248dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="323dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/Welcome"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:onClick="newGame"
        android:text="@string/new_game_select"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loadGameButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusReportTitle" />

    <Button
        android:id="@+id/loadGameButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:onClick="viewLoadOptions"
        android:text="@string/load_game_select"
        app:layout_constraintBottom_toBottomOf="@+id/newGameButton"
        app:layout_constraintStart_toEndOf="@+id/newGameButton"
        app:layout_constraintTop_toTopOf="@+id/newGameButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/quitGameButton"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:onClick="quitGame"
        android:text="@string/quit_game_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loadGameButton" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="363dp"
        android:layout_height="192dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/hands_background"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainAnnouncement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/fileNameText"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/hands_background"
        android:padding="6dp"
        android:text="@string/enter_file_name"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playerLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="184dp"
        android:text="@string/load_player_save"
        android:visibility="invisible"
        android:onClick="loadGame"
        app:layout_constraintEnd_toStartOf="@+id/caseLoad"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusReportTitle" />

    <Button
        android:id="@+id/caseLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/load_from_cases"
        android:visibility="invisible"
        android:onClick="loadCases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playerLoad"
        app:layout_constraintTop_toBottomOf="@+id/statusReportTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>